Small change for wheel packaging

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include *.txt LICENSE CONTRIBUTING.md BUILDING.md CMakeLists.txt pyproject.toml couchbase_columnar_version.py pycbcc_build_setup.py
-include couchbase-sdk-python-black-duck-manifest.yaml
+include columnar-sdk-python-black-duck-manifest.yaml
+include couchbase_columnar/common/core/nonprod_certificates/*.pem
 recursive-include couchbase_columnar *.py
 recursive-include acouchbase_columnar *.py
 recursive-include src *.[ch]xx
