PYCO-13: Validate Cancel API
Motivation
==========
Eventually cancelling certain requests will be part of the provided
Columnar API.  We want to make sure we have a good baseline for being
able to provide cancel functionality.

Changes
=======
* Allow concurrent.Future to be returned when wanting the option to
  cancel queries in the blocking API.
* Return asyncio.Future for acouchbase_columnar queries.
* Default in blocking API is no longer to execute lazily.  Option
  provided in case that is desired.
* Added tests to confirm functionality in both blocking and async APIs.

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -4,7 +4,7 @@ host = localhost
 port = 8091
 username = Administrator
 password = password
-bucket_name = travel-sample
+database_name = travel-sample
 scope_name = inventory
 collection_name = airline
 nonprod = False
