--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -1,11 +1,8 @@
 [columnar]
 scheme = couchbases
 host = localhost
-port = 8091
 username = Administrator
 password = password
-database_name = travel-sample
-scope_name = inventory
-collection_name = airline
 nonprod = False
 disable_server_cert_verification = False
+fqdn = travel-sample.inventory.airline
