--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,7 @@ add_library(pycbcc_core SHARED ${SOURCE_FILES})
 
 target_include_directories(
   pycbcc_core PRIVATE
+  "${COUCHBASE_CXX_BINARY_DIR}/generated"
   "${COUCHBASE_CXX_SOURCE_DIR}"
   "${COUCHBASE_CXX_SOURCE_DIR}/third_party/cxx_function"
   "${COUCHBASE_CXX_SOURCE_DIR}/third_party/expected/include")
