--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -8,4 +8,4 @@ database_name = travel-sample
 scope_name = inventory
 collection_name = airline
 nonprod = False
-tls_verify = True
+disable_server_cert_verification = False
